ecmascript/parser/tests/test262-error-references/fail/635ca73d00d4f28b.js.stderr
error: Expected a binary digit
 --> $DIR/tests/test262-parser/fail/635ca73d00d4f28b.js:1:3
  |
1 | 0b
  |   ^

